src/objects/Chapter_Section__c.object
<CustomObject>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <referenceTo>Chapter__c</referenceTo>
        <relationshipLabel>Chapter Sections</relationshipLabel>
        <relationshipName>Chapter_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Template</label>
        <referenceTo>Publication_Template__c</referenceTo>
        <relationshipLabel>Chapter Sections</relationshipLabel>
        <relationshipName>Chapter_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Chapter Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapter Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>